Add stying for Home page components

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,9 @@
 @import "base/reset";
 @import "base/typography";
 
+@import "components/button";
+@import "components/input";
+
 @import "layout/header";
 @import "layout/layout";
 
