--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 
 @import "base/reset";
 @import "base/typography";
+@import "base/utils";
 
 @import "components/button";
 @import "components/input";
