Refactor scss files

--- a/src/styles/base/_utils.scss
+++ b/src/styles/base/_utils.scss
@@ -1,5 +1,10 @@
 .flex {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+}
+
+.flex-vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
