--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,6 +1,8 @@
 .btn {
   padding: 1.3rem 2.5rem;
   background-color: $color-primary;
+  text-decoration: none;
+  font-size: 1.8rem;
   border: none;
   border-radius: 0.4rem;
   color: $color-white;
