Refactor converted result card styles from home page to converted-result-card component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 
 @import "components/button";
 @import "components/input";
+@import "components/converted-result-card";
 
 @import "layout/header";
 @import "layout/layout";
