--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,5 +1,6 @@
 .btn {
   padding: 1.3rem 2.5rem;
+  text-align: center;
   background-color: $color-primary;
   text-decoration: none;
   font-size: 1.8rem;
