--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -9,10 +9,10 @@
   top: 0;
   left: 0;
   width: 100%;
-}
 
-@media only screen and (max-width: 700px) {
-  .header {
-    padding: 0 $padding-x-small;
+  @media only screen and (max-width: 700px) {
+    & {
+      padding: 0 $padding-x-small;
+    }
   }
 }
