--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -5,6 +5,12 @@
 .layout {
   padding: 0 $padding-x-large;
   margin-top: 14rem;
+
+  @media only screen and (max-width: 700px) {
+    & {
+      padding: 0 $padding-x-small;
+    }
+  }
 }
 
 .form-group {
@@ -16,6 +22,12 @@
     font-size: 1.8rem;
     margin-bottom: 0.7rem;
   }
+
+  @media only screen and (max-width: 700px) {
+    &:first-child {
+      margin-bottom: 1rem;
+    }
+  }
 }
 
 .conversion-controls {
@@ -23,6 +35,11 @@
   flex-direction: column;
   justify-content: space-between;
   width: 70%;
+  @media only screen and (max-width: 700px) {
+    & {
+      width: 100%;
+    }
+  }
 }
 
 .conversion-controls__select {
@@ -50,6 +67,16 @@
 
 .currency-box--controls {
   padding-top: 3rem;
+  display: flex;
+  gap: 2rem;
+  justify-content: space-between;
+
+  @media only screen and (max-width: 700px) {
+    & {
+      padding-top: 1.2rem;
+      flex-direction: column;
+    }
+  }
 }
 
 .conversion-details--link {
