--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -6,6 +6,7 @@
   background-color: $color-primary;
   padding: 0 $padding-x-large;
   position: fixed;
+  z-index: 10;
   top: 0;
   left: 0;
   width: 100%;
